--- a/.classpath
+++ b/.classpath
@@ -11,12 +11,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
-		<attributes>
-			<attribute name="optional" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="src" path="src/main/test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
@@ -28,5 +23,8 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/runningtime/jetty/jetty-6.1.8.jar"/>
+	<classpathentry kind="lib" path="lib/runningtime/jetty/jetty-util-6.1.8.jar"/>
+	<classpathentry kind="lib" path="lib/runningtime/jetty/servlet-api-2.5-6.1.8.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
